Fix price block layout, add click-to-upload feature, and fix text wrapping issue

--- a/public/banner_demo/test.html
+++ b/public/banner_demo/test.html
@@ -134,22 +134,12 @@
             秒杀到手价
             <!-- 固定文案，如需可改也可以加 data-field -->
           </p>
-          <p class="price">
-            <span class="sign">￥</span>
-            <span
-              class="price-int"
-              data-field="sec_price_int"
-              data-label="到手价-整数部分"
-            >
-            29
-            </span>
-            <span
-              class="decimal"
-              data-field="sec_price_decimal"
-              data-label="到手价-小数部分"
-            >
-            .9
-            </span>
+          <p
+            class="price"
+            data-field-int="sec_price_int"
+            data-field-decimal="sec_price_decimal"
+          >
+            <span class="sign">￥</span>29<span class="decimal">.9</span>
           </p>
         </div>
 
